--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,25 @@ ul {
   padding: 0;
 }
 
+.form {
+  width: 100%;
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--borderRadius);
+  background: var(--backgroundColor);
+  border: 1px solid var(--grey-200);
+}
+
 .underline-div {
   margin: 0;
   background: var(--primary-700);
